<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="starters">starters</string>
    <string name="dishes">dishes</string>
    <string name="desserts">desserts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="total">Total</string>
    <string name="itemAdded">Votre plat a été ajouté au panier</string>
    <string name="Order">Passer la commande </string>
    <string name="registerTitle">Création de votre compte</string>
    <string name="email">Email</string>
    <string name="loginTiltle">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="register">Créer votre compte</string>
    <string name="noAccount">je n\'ai pas de compte</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="invalidForms">Veuillez saisir tous les champs </string>

</resources>