<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF38A"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationX="12"
        android:text="Welcome To DroidRestaurant !"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF5722"
        android:textDirection="firstStrong"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/buttonStarters"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="50dp"
        android:text="@string/starters"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDishes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonDishes"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="50dp"
        android:text="@string/dishes"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDesserts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStarters" />

    <Button
        android:id="@+id/buttonDesserts"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/desserts"
        android:textColor="#FF9800"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDishes"
        app:layout_constraintVertical_bias="0.103" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/buttonDishes"
        app:layout_constraintTop_toBottomOf="@+id/buttonStarters"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/buttonDesserts"
        app:layout_constraintTop_toBottomOf="@+id/buttonDishes"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="381dp"
        android:layout_height="396dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/sans_titre"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>